codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__shutdown_in_progress.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭ Unavailable ─────────────────────────╮"
"│ › Shutting down...                   │"
"╰──────────────────────────────────────╯"
